Fix overflow styles in Slick Slider

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -43,3 +43,6 @@ section {
         background-color: $grayBg;
     }
 }
+.slick-initialized {
+    overflow: hidden;
+}
